kustomize/mirotalk/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "5"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mirotalk"},"name":"mirotalk","namespace":"mirotalk"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mirotalk"}},"template":{"metadata":{"labels":{"app":"mirotalk"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"mirotalk-config"}}],"image":"mirotalk/p2p:latest","name":"mirotalk","ports":[{"containerPort":3000}]}]}}}}
    creationTimestamp: "2024-02-25T19:41:12Z"
    generation: 5
    labels:
      app: mirotalk
    name: mirotalk
    namespace: mirotalk
    resourceVersion: "20144837"
    uid: 10cf0cb4-c19b-4ded-bbb3-a3d446d2424d
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mirotalk
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2024-02-25T20:59:42+01:00"
        creationTimestamp: null
        labels:
          app: mirotalk
      spec:
        containers:
        - envFrom:
          - configMapRef:
              name: mirotalk-config
          image: mirotalk/p2p:latest
          imagePullPolicy: Always
          name: mirotalk
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-02-25T19:41:13Z"
      lastUpdateTime: "2024-02-25T19:59:48Z"
      message: ReplicaSet "mirotalk-6fcf987789" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-12-15T01:11:41Z"
      lastUpdateTime: "2024-12-15T01:11:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 5
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
