kustomize/mirotalk/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"traefik"},"name":"mirotalk-ingress","namespace":"mirotalk"},"spec":{"rules":[{"host":"conf.stillon.top","http":{"paths":[{"backend":{"service":{"name":"mirotalk","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["conf.stillon.top"],"secretName":"conf.stillon.top-tls"}]}}
      kubernetes.io/ingress.class: traefik
    creationTimestamp: "2024-02-25T19:41:13Z"
    generation: 1
    name: mirotalk-ingress
    namespace: mirotalk
    resourceVersion: "8423875"
    uid: 563dbc4a-b7cc-44df-b3e0-19079c43e330
  spec:
    rules:
    - host: conf.stillon.top
      http:
        paths:
        - backend:
            service:
              name: mirotalk
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - conf.stillon.top
      secretName: conf.stillon.top-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
