kustomize/mirotalk/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mirotalk","namespace":"mirotalk"},"spec":{"ports":[{"port":80,"targetPort":3000}],"selector":{"app":"mirotalk"}}}
    creationTimestamp: "2024-02-25T19:41:12Z"
    name: mirotalk
    namespace: mirotalk
    resourceVersion: "8423857"
    uid: 86d970b5-f470-44c7-93dc-6a6e2ab6943c
  spec:
    clusterIP: 10.43.195.91
    clusterIPs:
    - 10.43.195.91
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: mirotalk
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
